tests/ucc/type/good/assign-plus-int-vs-ptr.c
int main(void)
{
    int a = 1;
    int *b;

    b += a;

    return 0;
}
