tests/ucc/type/bad/post-incr-const.c
int main(void)
{
    int * const b;

    b++;

    return 0;
}
